project('LogTest', 'cpp', default_options: ['cpp_std=c++11'])

variant = 'VARIANT_' + get_option('variant').to_upper()

src = [
	'fmt/fmt/container.h',
	'fmt/fmt/format.cc',
	'fmt/fmt/format.h',
	'fmt/fmt/ostream.cc',
	'fmt/fmt/ostream.h',
	'fmt/fmt/posix.cc',
	'fmt/fmt/posix.h',
	'fmt/fmt/printf.cc',
	'fmt/fmt/printf.h',
	'fmt/fmt/string.h',
	'fmt/fmt/time.h',

	'LogInterface.cpp',
	'LogInterface.h',
	'main.cpp',
	'unit.cpp',

	# These are all copies of unit.cpp
	'unit_1.cpp',
	'unit_2.cpp',
	'unit_3.cpp',
	'unit_4.cpp',
	'unit_5.cpp',
	'unit_6.cpp',
	'unit_7.cpp',
	'unit_8.cpp',
	'unit_9.cpp',
	'unit_10.cpp',
	'unit_11.cpp',
	'unit_12.cpp',
	'unit_13.cpp',
	'unit_14.cpp',
	'unit_15.cpp',
	'unit_16.cpp',
	'unit_17.cpp',
	'unit_18.cpp',
	'unit_19.cpp',
	'unit_20.cpp',
	'unit_21.cpp',
	'unit_22.cpp',
	'unit_23.cpp',
	'unit_24.cpp',
	'unit_25.cpp',
	'unit_26.cpp',
	'unit_27.cpp',
	'unit_28.cpp',
	'unit_29.cpp',
	'unit_30.cpp',
	'unit_31.cpp',
	'unit_32.cpp',
	'unit_33.cpp',
	'unit_34.cpp',
	'unit_35.cpp',
	'unit_36.cpp',
	'unit_37.cpp',
	'unit_38.cpp',
	'unit_39.cpp',
	'unit_40.cpp',
	'unit_41.cpp',
	'unit_42.cpp',
	'unit_43.cpp',
	'unit_44.cpp',
	'unit_45.cpp',
	'unit_46.cpp',
	'unit_47.cpp',
	'unit_48.cpp',
	'unit_49.cpp',
	'unit_50.cpp',
	'unit_51.cpp',
	'unit_52.cpp',
	'unit_53.cpp',
	'unit_54.cpp',
	'unit_55.cpp',
	'unit_56.cpp',
	'unit_57.cpp',
	'unit_58.cpp',
	'unit_59.cpp',
	'unit_60.cpp',
	'unit_61.cpp',
	'unit_62.cpp',
	'unit_63.cpp',
	'unit_64.cpp',
	'unit_65.cpp',
	'unit_66.cpp',
	'unit_67.cpp',
	'unit_68.cpp',
	'unit_69.cpp',
	'unit_70.cpp',
	'unit_71.cpp',
	'unit_72.cpp',
	'unit_73.cpp',
	'unit_74.cpp',
	'unit_75.cpp',
	'unit_76.cpp',
	'unit_77.cpp',
	'unit_78.cpp',
	'unit_79.cpp',
	'unit_80.cpp',
	'unit_81.cpp',
	'unit_82.cpp',
	'unit_83.cpp',
	'unit_84.cpp',
	'unit_85.cpp',
	'unit_86.cpp',
	'unit_87.cpp',
	'unit_88.cpp',
	'unit_89.cpp',
	'unit_90.cpp',
	'unit_91.cpp',
	'unit_92.cpp',
	'unit_93.cpp',
	'unit_94.cpp',
	'unit_95.cpp',
	'unit_96.cpp',
	'unit_97.cpp',
	'unit_98.cpp',
	'unit_99.cpp',
	'unit_100.cpp',
]

inc = include_directories('spdlog/include', 'fmt')

executable('logtest', src, include_directories: inc, cpp_args: ['-D' + variant, '-Wno-unused-function'])
